--- a/students/wma422837-MuhammadAhmed/style.css
+++ b/students/wma422837-MuhammadAhmed/style.css
@@ -905,3 +905,27 @@ p {
 .font-bold {
     font-family: 'Roboto Bold', 'Sans Bold';
 }
+
+.card-group {
+    display: flex;
+    max-width : 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    
+}
+.card {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+}
+.card img {
+        transition: all 0.5s ease;
+        -webkit-transition: all 0.5s ease;
+
+        opacity: 0.8;
+        position: relative;
+        backface-visibility: hidden;
+        width: 70%;
+    }
