--- a/students/wma422837-MuhammadAhmed/style.css
+++ b/students/wma422837-MuhammadAhmed/style.css
@@ -1179,10 +1179,10 @@ p {
 .card {
     flex: 1 1 calc(25% - 20px);
     min-width: 250px;
-
+    text-align: center;
     border-radius: 8px;
     overflow: hidden;
-
+    justify-content: center;
     transition: transform 0.3s ease;
 }
 
