--- a/students/wma422837-MuhammadAhmed/style.css
+++ b/students/wma422837-MuhammadAhmed/style.css
@@ -1172,7 +1172,7 @@ p {
 .card-row {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     gap: 20px;
 }
 
@@ -1440,3 +1440,158 @@ p {
         font-size: 13px;
     }
 }
+
+
+.card-container1 {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    display: grid;
+
+}
+.heading {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+ .heading h1 {
+    font-size: 30px;
+    justify-content: center;
+    align-items: center;
+    color: #71277a;
+}
+.images1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 35px;
+}
+.images1 img {
+    width: 21%;
+}
+
+.text-underline {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    text-decoration: none;
+}
+.text-underline:hover {
+    text-decoration: underline;
+    color: #71277a;
+}
+.awards-recognition{
+    background-color: #ebebeb;
+}
+
+.container-fluid {
+    padding-left: 0;
+    padding-right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-hotlinks div {
+    border-style: solid;
+    border-width: 0 1px 0 0;
+    border-color: #b88fbe;
+    background-color: #701e7d;
+}
+
+@media (min-width: 1200px) {
+    .col-lg-3
+
+ {
+        width: 25%;
+    }
+}
+
+.footer-hotlinks div a {
+    display: block;
+    text-align: center;
+    color: #fff;
+    text-decoration: none;
+    justify-content: center;
+}
+@media (min-width: 1200px) {
+    .footer-hotlinks a {
+        margin: 0;
+        padding: 30px 0;
+        font-size: 20px;
+    }
+}
+
+.footer-hotlinks .hotlink-lab {
+    width: 20px;
+
+    background-position: -443px -5px;
+}
+
+.footer-hotlinks .hotlink-common {
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 8px 0 0;
+    height: 26px;
+}
+
+@media (min-width: 1200px) {
+    .footer-meta {
+        padding: 40px 45px;
+    }
+}
+.col-lg-2 h3 {
+    font-size: 14px;
+    color: black;
+    margin:20px;
+}
+@media (min-width: 1200px) {
+    .footer-pages ul {
+        margin-bottom: 25px;
+    }
+}
+
+.footer-meta ul
+
+ {
+    margin: 0;
+    padding: 15px;
+    list-style: none;
+}
+
+@media (min-width: 1200px) {
+    .footer-pages ul li {
+        margin-bottom: 8px;
+        font-size: 13px;
+    }
+}
+
+
+
+.footer-meta a
+
+ {
+    color: #1f1e1e;
+    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+}
+
+@media (min-width: 1200px) {
+    .col-lg-2 {
+        width: 16.66666667%;
+        padding: 0 15px;
+
+    }
+}
+
+@media (min-width: 1200px) {
+    .footer-meta h3 {
+        margin: 0 0 20px 0;
+
+        font-size: 14px;
+    }
+}
+
